--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
-
-    <title>D3 Explorer</title>    
+    <title>D3.js Explorer</title>
+    <meta name="description" content="Exploring D3.js (v5): ES2015/ES6, Webpack, D3 and React.js" />
 </head>
 <body>
-    <a href="https://github.com/artyomtrityak/d3-explorer"><img style="position: absolute; top: 0; right: 0; border: 0; width: 100px;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
-
     <div id="root"></div>
+    <a href="https://github.com/artyomtrityak/d3-explorer"><img style="position: absolute; top: 0; right: 0; border: 0; width: 100px; z-index: 1;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
     <script type="text/javascript" src="static/build/bundle.js"></script>
 </body>
 </html>
