--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
-    <title>D3.js Explorer</title>
-    <meta name="description" content="Exploring D3.js (v5): ES2015/ES6, Webpack, D3 and React.js" />
+    <title>D3.js React.js Explorer</title>
+    <meta name="description" content="Exploring D3.js (v5): ES2015/ES6, Webpack, D3 and React" />
 </head>
 <body>
     <div id="root"></div>
